# nanomemo

./: .gitignore  CITATIONS.md  LICENSE  README.md
.claude/: CLAUDE.md
evaluation/: .gitignore  OFFICIAL_EVAL.md  README.md  STRUCTURE.md  evals.py  llm_judge.py  metrics.py  nanomemo_adapter.py  requirements.txt  run_experiments.py
evaluation/adapters/: nanomemo_adapter.py  simple_qa_adapter.py
evaluation/dataset/: README.md  locomo10_converted.json  locomo_100q.json  locomo_20q_full.json  locomo_5q.json  locomo_5q_full.json  sample_locomo.json
evaluation/scripts/: calculate_metrics.py  convert_dataset.py  run_dialog_baseline.py  run_experiments.py  run_official_eval.py  run_simple_qa.py
evaluation/tests/: test_api.py  test_memory.py
examples/: README.md
examples/memory/: mistakes.md
examples/memory/daily/: 2026-02-24.md
examples/memory/people/: alice.md
examples/memory/projects/: api-v2.md
python/: README.md  pyproject.toml
python/nanomemo/: __init__.py
templates/: MEMORY.md  daily.md  event.md  person.md  project.md
